# yconn

./: CLAUDE.md  Cargo.toml  HISTORY-TASKS.md  Makefile  README.md  TASKS.md
.claude/: CLAUDE.md  current-task  settings.json
.github/workflows/: ci.yml  release.yml
config/: connections.yaml
docs/: configuration.md  examples.md
docs/man/: yconn.1.md
packaging/aur/: PKGBUILD.template
packaging/deb/: control
scripts/: build-aur.sh  build-deb.sh  build-pkg.sh  install-deps.sh
src/: main.rs
src/cli/: mod.rs
src/commands/: add.rs  config.rs  connect.rs  edit.rs  group.rs  init.rs  install.rs  keys.rs  list.rs  mod.rs  remove.rs  show.rs  ssh_config.rs  user.rs
src/config/: mod.rs
src/connect/: mod.rs
src/display/: mod.rs
src/docker/: mod.rs
src/group/: mod.rs
src/security/: mod.rs
tests/: functional.rs
tests/fixtures/: connections.yaml
