[package]
name = "yconn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.182"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[profile.release]
strip = true

[dev-dependencies]
tempfile = "3.26.0"
