[package]
name = "yconn"
version = "1.11.0"
edition = "2021"
description = "SSH connection manager for teams and DevOps environments"
license = "MIT"
repository = "https://github.com/yanctab/yconn"
homepage = "https://github.com/yanctab/yconn"
readme = "README.md"
keywords = ["ssh", "connections", "devops", "cli", "manager"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.182"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
wildmatch = "2"

[profile.release]
strip = true

[dev-dependencies]
tempfile = "3.26.0"
